Clear HTML when partial is removed,
Update bower dependencies
* StarcounterSamples/launcher-include@0.3.0
* Juicy/juicy-tile-table@0.0.4

Starcounter/starcounter-include/issues/7

--- a/src/Launcher/wwwroot/sys/juicy-tile-table/juicy-tile-table.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-table/juicy-tile-table.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-table
 @demo https://Juicy.github.io/juicy-tile-table/
-version: 0.0.2
+version: 0.0.4
 -->
 <!-- Import juicy-tile-list -->
 <link rel="import" href="../juicy-tile-list/src/juicy-tile-list.html">
@@ -87,7 +87,7 @@ version: 0.0.2
             z-index: initial;
         }
     </style>
-    <content class="not-a-tile"></content>
+    <content select="script,style,template" class="not-a-tile"></content>
 </template>
 
 <script>
