Added a lightbox popup component container to place the lightbox image late in the dom.

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -155,6 +155,8 @@
             </div>
         </template>
 
+        <tu-lightbox-popup></tu-lightbox-popup>
+
         <paper-dialog opened="{{model.ConnectionError}}" modal="true">
             <h4>Connection error</h4>
             <p>You have been disconnected from server. Please reload page.</p>
