--- a/src/Launcher/wwwroot/sys/juicy-highlight/src/juicy-highlight.html
+++ b/src/Launcher/wwwroot/sys/juicy-highlight/src/juicy-highlight.html
@@ -1,4 +1,4 @@
-<!-- juicy-highlight v1.0.0 | MIT License -->
+<!-- juicy-highlight v1.0.6 | MIT License -->
 <script>
     (function (global) {
         var JuicyHighlightPrototype = Object.create(HTMLElement.prototype);
@@ -222,7 +222,7 @@
         JuicyHighlightPrototype.hide = function () {
             this.removeContent();
 
-            if (this.overlay && svg.parentNode) {
+            if (svg && svg.parentNode) {
                 document.body.removeChild(svg);
             }
             if (this.focusRect && this.focusRect.parentNode) {
@@ -286,6 +286,10 @@
 
         JuicyHighlightPrototype.detachedCallback = function () {
             this.hide();
+        };
+
+        JuicyHighlightPrototype.getSvg = function () {
+            return svg;
         };
 
         global.JuicyHighlightElement = document.registerElement('juicy-highlight', {
