use Launcher's server side information to select the active workspace (https://github.com/StarcounterPrefabs/Launcher/issues/208)

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -104,19 +104,15 @@
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
             <launcher-display-route match-path="^\/launcher\/" uri="{{model.uri}}" display-selector=".workspace.launcher"></launcher-display-route>
 
-            <!-- Workspaces -->
-            <template is="dom-repeat" items="{{model.workspaces}}">
-                <!-- - workspace -->
-                <template is="dom-if" if="{{item.Launcher.AppName}}">
-                    <launcher-display-route match-path$="{{concat('^\/', item.Launcher.AppName, '([/].*)?$')}}" uri="{{model.uri}}" display-selector$="{{concat('.workspace.', item.Launcher.AppName)}}"></launcher-display-route>
-                    <starcounter-include class$="{{concat('workspace ', item.Launcher.AppName)}}" partial="{{item}}"></starcounter-include>
+            <!-- Workspaces -- >
+            <h1>Wy: {{model.activeWorkspace}}</h1>
+                <template is="dom-if" if="{{model.enableWorkspaces}}" restamp>
+                    <h1>My: {{model.activeWorkspace}}</h1>
+                    <starcounter-include workspaces="{{model.workspaces}}" partial="{{getWorkspace(model.workspaces, model.activeWorkspace, model.uri)}}"></starcounter-include>
                 </template>
-                <template is="dom-if" if="{{!item.Launcher.AppName}}">
-                    <div style="padding: 15px; font-weight:bold; color:red;">
-                        <div>A workspace without AppName</div>
-                        <div>{{item.Html}}</div>
-                    </div>
-                </template>
+            -->
+            <template is="dom-repeat" items="{{model.workspaces}}" filter="filterActiveWorkspace" observe="Launcher.ActiveWorkspace">
+                <starcounter-include partial="{{item}}"></starcounter-include>
             </template>
         </div>
 
@@ -152,6 +148,10 @@
 
             template.concat = function () {
                 return Array.prototype.join.call(arguments, "");
+            };
+
+            template.filterActiveWorkspace = function (workspace) {
+                return workspace.Launcher.ActiveWorkspace;
             };
 
             template.toggleEditor = function () {
