fix client side switching of workspaces to not remove inactive workspace (https://github.com/StarcounterPrefabs/Launcher/issues/214)

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -101,8 +101,9 @@
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
             <launcher-display-route match-path="^\/launcher\/" uri="{{model.uri}}" display-selector=".workspace.launcher"></launcher-display-route>
 
-            <template is="dom-repeat" items="{{model.workspaces}}" filter="filterActiveWorkspace" observe="Launcher.ActiveWorkspace">
-                <starcounter-include partial="{{item}}" class="workspace" visible></starcounter-include>
+            <template is="dom-repeat" items="{{model.workspaces}}">
+                <span style="color: red">Launcher has created <span>{{displayed(item)}}</span> workspaces so far</span>
+                <starcounter-include partial="{{item}}" class="workspace" visible$="{{item.Launcher.ActiveWorkspace}}"></starcounter-include>
             </template>
         </div>
 
@@ -140,8 +141,10 @@
                 return Array.prototype.join.call(arguments, "");
             };
 
-            template.filterActiveWorkspace = function (workspace) {
-                return workspace.Launcher.ActiveWorkspace;
+            var counter = 0;
+            template.displayed = function (item) {
+                counter++;
+                return counter;
             };
 
             template.toggleEditor = function () {
