Draft of predefined layouts
Starcounter/RebelsLounge/issues/14
Update dependencies:

-Juicy/juicy-tile-editor@a82d0d47ec
-Juicy/juicy-highlight@e308bb5102

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
@@ -6,6 +6,7 @@
                                   class="max-height"
                                   has-changes="{{model.layoutModified$}}"
                                   on-close-click="closeEditor"></juicy-tile-simple-editor>
+        <script src="/Launcher/js/predefinedLayouts.js"></script><!-- This needs to be a nextElementSiling -->
     </template>
     <script>
         (function () {
