--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor-style.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor-style.html
@@ -83,7 +83,7 @@
             }
 
             .editor-tabs button.btn-tree {
-                margin-top: 10px;
+                margin-top: 9px;
             }
 
             .editor-tabs button.btn-tab {
@@ -340,6 +340,7 @@
                 display: block;
                 font-size: 15px;
                 margin: 10px 0px 5px 0px;
+                min-height: 22px;
             }
 
             .editor-simple-form .width-section .btn-group {
