--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html
@@ -17,14 +17,21 @@
             <button on-click="toggleTree" class="btn-tree">List</button>
         </div>
         <template is="dom-if" if="{{!showMore}}" restamp>
-            <div class="editor-simple-form">
+            <div class="editor-simple-form" style="overflow: auto;">
                 <div class="editor-form-section save-section">
+                    <select on-change="_choosePredefinedSetup">
+                        <option></option>
+                        <template is="dom-repeat" items="{{predefinedSetups}}">
+                            <option value="{{index}}">{{item.id}}</option>
+                        </template>
+                    </select>
+                    <!-- <button type="button" class="btn" on-click="applyPredefinedSetup">Predefined</button> -->
                     <button type="button" class="btn" on-click="saveSetup" disabled="{{!isModified}}">Save</button>
                     <button type="button" class="btn" on-click="resetSetup">Reset</button>
                 </div>
                 <div class="editor-form-section media-section">
                     <template is="dom-repeat" items="{{mediaScreenRanges}}">
-                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}">
+                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}" disabled="{{!selectedList}}">
                             <span>{{item.width}}</span><span>px</span>
                         </button>
                     </template>
@@ -80,7 +87,7 @@
                 </div>
                 <div class="editor-form-section media-section">
                     <template is="dom-repeat" items="{{mediaScreenRanges}}">
-                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}">
+                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}" disabled="{{!selectedList}}">
                             <span>{{item.width}}</span><span>px</span>
                         </button>
                     </template>
@@ -89,9 +96,9 @@
                     <label>Gutter</label>
                     <div class="gutter-border"></div>
                     <div class="btn-group">
-                        <input type="text" value="{{gutter::change}}" disabled$="{{!selectedList}}" />
-                        <button class="btn-range" disabled$="{{!selectedList}}" on-click="gutterPlus">+</button>
-                        <button class="btn-range" disabled$="{{!selectedList}}" on-click="gutterMinus">-</button>
+                        <input type="text" value="{{gutter::change}}" disabled$="{{!getIsGutterable(selectedList, selectedScope)}}" />
+                        <button class="btn-range" disabled$="{{!getIsGutterable(selectedList, selectedScope)}}" on-click="gutterPlus">+</button>
+                        <button class="btn-range" disabled$="{{!getIsGutterable(selectedList, selectedScope)}}" on-click="gutterMinus">-</button>
                     </div>
                     <div class="gutter-border"></div>
                 </div>
