--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -4,7 +4,7 @@ Custom Element (w/ Polymer's TempalteBinding)
 with predefined template content, which should be used to include partials.
 It's just <template is="imported-template"> wrapped within <juicy-tile-table> and layout editor.
 Uses juicy-tiles setup given from DB as layout.
-version: 0.4.1
+version: 0.4.2
 
 @FIXME (tomalec): Use scoped Partial and layout data once implemented on server-side
 @FIXME (tomalec): DRY with default starcounter-include
@@ -137,7 +137,12 @@ version: 0.4.1
             }
             if (!layout) {
                 this.sync.storedValue = null;
-                this.grid.setup = null;
+                this.grid.setup = {
+                    gutter: 0,
+                    width: 1200,
+                    direction: "horizontal",
+                    items: []
+                };
             } else {
                 var parsedLayout = JSON.parse(layout);
                 this.sync.storedValue = parsedLayout;
