--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-list
 @demo https://Juicy.github.io/juicy-tile-list/
-version: 1.3.0
+version: 1.3.2
 
 @TODO: (tomalec) Create setup listener, to work better with Polymer tempalte binding, editor, and inline changes
 -->
@@ -45,8 +45,7 @@ version: 1.3.0
         }
     </style>
     <div id="container" class="animate"></div>
-    <content select="style"></content>
-    <content select="script"></content>
+    <content></content>
 </template>
 
 <script>
@@ -676,7 +675,14 @@ version: 1.3.0
             this.cleanupDOM();
             // console.log("setup changed")
             Package.call(this, this.setup);
-            this._defaultSetup(this.tiles, this.setup.items, this.allItems, this.defaultTileSetup);
+            // XXX (tomalec): needed only if mutation occured in meantime.
+            // Consider moving to (always obseving) mutation observer,
+            // or removing at all
+            // after filtering & co. will be moved to juicy-composer
+            this.createItemsList();
+            // otherwise this would be enough
+            // this._defaultSetup(this.tiles, this.setup.items, this.allItems, this.defaultTileSetup);
+            console.info('refresh')
             this.refresh(this._isShadomDOMOutdated);
         };
 
