--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -91,7 +91,7 @@
                 <!--<launcher-launchpad json="{{model.launchpad}}"></launcher-launchpad>-->
 
             </div>
-            <launcher-display-route match-path="^\/$|\/launcher/?$" uri="{{model.uri}}" display-selector=".launchpad"></launcher-display-route>
+            <launcher-display-route match-path="^\/$|^\/launcher/?$" uri="{{model.uri}}" display-selector=".launchpad"></launcher-display-route>
 
             <!-- <starcounter-include class="workspace launcher" partial="{{currentPage}}"></starcounter-include> -->
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
