Update bower dependencies:
-Juicy/juicy-tile-list@1.3.3
-Juicy/juicy-tile-table@3a367437cc

--- a/src/Launcher/wwwroot/sys/juicy-tile-list/test/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/test/index.html
@@ -29,7 +29,7 @@
           'refresh/onAttached.html',
           'refresh/onSetupChange.html',
           'directions.html',
-          'precalculate.html',
+        //   'precalculate.html', // disable untill juicy-composer will take responsibility of filtering, making ids, and slots.
           'declarative_setup/juicy-style_attribute.html'
         ]);
     </script>
