--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-list
 @demo https://Juicy.github.io/juicy-tile-list/
-version: 1.3.2
+version: 1.3.3
 
 @TODO: (tomalec) Create setup listener, to work better with Polymer tempalte binding, editor, and inline changes
 -->
@@ -889,13 +889,14 @@ version: 1.3.2
               // TODO (tomalec): parse some values according to
               // https://drafts.csswg.org/css2/syndata.html#tokenization
               // but optimze to avoid regexps as much as possible
-              if(cssValue === '0'){
-                  cssValue = 0;
-              }
               if(cssProperty === 'width' || cssProperty === 'height'){
-                  if(cssValue.indexOf('px')>-1){
+                  if(cssValue.indexOf('%')==-1){
                       cssValue = parseFloat(cssValue);
                   }
+              } else if(cssValue === 'true'){
+                  cssValue = true;
+              } else if(cssValue === 'false'){
+                  cssValue = false;
               }
 
               // silently ignore unknown values https://drafts.csswg.org/css2/syndata.html#unsupported-values
