--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor-style.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor-style.html
@@ -219,7 +219,7 @@
                 display: flex;
                 flex-direction: column;
                 width: 80px;
-                padding: 10px 0px;
+                padding: 10px 0px 0px 0px;
             }
 
             .editor-simple-form .save-section button.btn {
