--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-list
 @demo https://Juicy.github.io/juicy-tile-list/
-version: 1.3.3
+version: 1.4.0
 
 @TODO: (tomalec) Create setup listener, to work better with Polymer tempalte binding, editor, and inline changes
 -->
@@ -397,11 +397,10 @@ version: 1.3.3
                 var tile = tiles[elNo];
 
                 if (!allItems[tile.id]) {
+                    itemSetup = JSON.parse(JSON.stringify(this.defaultTileSetup || defaultTileSetup));
                     // parse declarative per-item setup
                     if(tile.element.hasAttribute('juicy-style')){
-                        itemSetup = this.parseRules(tile.element.getAttribute("juicy-style"));
-                    } else {
-                        itemSetup = tile.defaultSetup ||  JSON.parse(JSON.stringify(defaultTileSetup));
+                        this.parseRules(tile.element.getAttribute("juicy-style"), itemSetup);
                     }
 
                     if (setupItems.length == 0) {
@@ -870,8 +869,7 @@ version: 1.3.3
               \n\width:40%;\n    priority:0.5;\n
           Modified ver
         */
-        proto.parseRules = function(rules) {
-          var map = {};
+        proto.parseRules = function(rules, map) {
           rules = rules.split(';');
 
           //proccess rules
